# flet-timer

./: CHANGELOG.md  README.md  pyproject.toml
examples/: example_1.py
src/flet_timer/: __init__.py  timer.py
